--- a/template/header.html
+++ b/template/header.html
@@ -17,7 +17,8 @@
          <script defer type="text/javascript" src="/assets/js/jquery.cookie.js"></script>
          <script async type="text/javascript" src="/assets/js/bignumber.js"></script>
          <script async type="text/javascript" src="/assets/js/langselect.js"></script>
-         <title>{{.Title}}</title>
+         <title>Rondo Wallet</title>
+		 
          <meta name="description" content="ETHAdmin is a free, open-source web wallet for interacting with Ethereum blockchain.">
     </head>
 {{ end }}
