--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
                     <div class="logo col xl10">
                         <!--<a href="/" class="brand-logo"><img src="/assets/img/LogoETHAdmin.png" width=200px height=50px style="margin-top: 13px;"></a>-->
                         <div class="header-logo">
-                            <a href="/" class="brand-logo"><img src="/assets/img/logo.png"> <span>ETH Admin</span></a>
+                            <a href="/" class="brand-logo"><img src="/assets/img/logo.png"> <span>Rondo Wallet</span></a>
                         </div>
                         <div class="network-select">
                             <select id="networkName" name="networkName">
